--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "sharp": "^0.33.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
